--- a/ActivityDemo/app/src/main/res/layout/activity_main.xml
+++ b/ActivityDemo/app/src/main/res/layout/activity_main.xml
@@ -4,19 +4,27 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.example.xuwanjin.activitydemo.MainActivity">
-
-    <Button
-        android:id="@+id/start_activity_explicit"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/start_activity_explicit" />
+        android:orientation="vertical"
+        >
 
-    <Button
-        android:id="@+id/start_activity_implicit"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/start_activity_implicit"
+        <Button
+            android:id="@+id/start_activity_explicit"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/start_activity_explicit" />
 
-        />
+        <Button
+            android:id="@+id/start_activity_implicit"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/start_activity_implicit"
+
+            />
+
+    </LinearLayout>
+
 
 </android.support.constraint.ConstraintLayout>
