--- a/ActivityDemo/app/src/main/res/layout/activity_main.xml
+++ b/ActivityDemo/app/src/main/res/layout/activity_main.xml
@@ -24,6 +24,14 @@
 
             />
 
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/start_activity_from_background"
+            android:text="@string/start_activity_from_background"
+
+            />
+
     </LinearLayout>
 
 
