add choose activity
Signed-off-by: xuwanjin <xuwanjin1991@Gmail.com>

--- a/ActivityDemo/app/src/main/res/layout/start_from_background_activity.xml
+++ b/ActivityDemo/app/src/main/res/layout/start_from_background_activity.xml
@@ -7,7 +7,9 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:id="@+id/started_activity_from_background"
         android:text="@string/started_activity_from_background"
+        android:textAllCaps="false"
         />
 
 </LinearLayout>
