--- a/ActivityDemo/app/src/main/res/layout/activity_main.xml
+++ b/ActivityDemo/app/src/main/res/layout/activity_main.xml
@@ -32,6 +32,13 @@
 
             />
 
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/choose_activity"
+            android:text="@string/choose_activity"
+            />
+
     </LinearLayout>
 
 
