add start for result activity
Signed-off-by: xuwanjin <xuwanjin1991@Gmail.com>

--- a/ActivityDemo/app/src/main/res/layout/activity_main.xml
+++ b/ActivityDemo/app/src/main/res/layout/activity_main.xml
@@ -39,6 +39,13 @@
             android:text="@string/choose_activity"
             />
 
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/start_activity_for_result"
+            android:text="@string/start_activity_for_result"
+            />
+
     </LinearLayout>
 
 
